# gtk-status-bar

./: .gitignore  BUG_REPORT_GTK_INTERACTIVE_DEBUG.md  BUG_REPORT_VOLUME_WIDGET_BT_DISCONNECT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  TOKIO_ASYNC_VOLUME_IMPLEMENTATION.md  flake.nix  style.css
crates/tray-ipc/: Cargo.toml
crates/tray-ipc/src/: lib.rs
crates/trayctl/: Cargo.toml
crates/trayctl/src/: main.rs
reports/title-widget-icons_39450d6_2026-07-13/: SHA256SUMS  bar-geometry.txt  gtk-status-bar-status.txt  report.md
research/: 2026-07-13-title-pill-and-tray-menu-investigation.md
src/: appearance.rs  bus.rs  clock.rs  dbus.rs  error.rs  hypr.rs  ipc.rs  lib.rs  main.rs  network.rs  pw.rs  tray.rs  widgets.rs
