[package]
name = "gtk-status-bar"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "gtk-status-bar"

[workspace]
members = ["crates/tray-ipc", "crates/trayctl"]
resolver = "3"

[dependencies]
gtk4-layer-shell = "0.8.0"
# GIO (GLib I/O) for Application and signal traits
gio = "0.22.8"
# DesktopAppInfo moved out of `gio` into the Unix-specific `gio-unix` crate in the
# gtk-rs 0.22 generation; used for matching Hyprland window classes to .desktop icons.
gio-unix = "0.22.8"
gtk4 = { version = "0.11.4", features = ["v4_22"] }
chrono = "0.4.42"
tokio = { version = "1.47.1", features = ["full"] }
# Pinned: rev after this adds a non-defaulted `visible: bool` to the Client
# struct (Hyprland >= 0.50). On Hyprland 0.49 the IPC JSON omits it, so serde
# fails to deserialize and title/active-window handling breaks at runtime with
# "missing field `visible`". Bump this rev only together with the compositor.
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", rev = "6206f713208005be6277762bb11c6a57581f5b70" }
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.99"
zbus = "5.11.0"
zbus_names = "4.2.0"
zvariant = "5.7.0"
futures = "0.3.31"
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", rev = "524bd67" }
async-channel = "2.5.0"
serde_json = "1.0.140"
tray-ipc = { path = "crates/tray-ipc" }
