[package]
name = "gtk-status-bar"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "gtk-status-bar"

[workspace]
members = ["crates/tray-ipc", "crates/trayctl"]
resolver = "3"

[dependencies]
gtk4-layer-shell = "0.8.0"
# GIO (GLib I/O) for Application and signal traits
gio = "0.22.8"
# DesktopAppInfo moved out of `gio` into the Unix-specific `gio-unix` crate in the
# gtk-rs 0.22 generation; used for matching Hyprland window classes to .desktop icons.
gio-unix = "0.22.8"
gtk4 = { version = "0.11.4", features = ["v4_22"] }
chrono = "0.4.42"
tokio = { version = "1.47.1", features = ["full"] }
# Pinned to the Hyprland 0.55 client/workspace schema. These structs include
# mapped/hidden/visible/acceptsInput and the other fields emitted by 0.55; older
# compositors omit them and cannot deserialize through this revision.
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", rev = "2b03a0cac46f311518aebae317c1f8751c9fadf0" }
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.99"
zbus = "5.11.0"
zbus_names = "4.2.0"
zvariant = "5.7.0"
futures = "0.3.31"
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", rev = "524bd67" }
async-channel = "2.5.0"
serde_json = "1.0.140"
tray-ipc = { path = "crates/tray-ipc" }
