[package]
name = "tray-ipc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tracing = "0.1.41"
